--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     environment:
       POSTGRES_DB: restaurant_db
       POSTGRES_USER: admin
-      POSTGRES_PASSWORD: 123456
+      POSTGRES_PASSWORD: password123
     ports:
       - "5433:5432" #solve comflict
     volumes:
